Test-cases/Errors/C20.inp
! OPT FREQ B3LYP DEF2-SVp 
%PAL NPROCS 2 END
* xyz 0 1
   C       -0.96028       -0.57833        1.66249
   C       -2.15668       -1.39937        1.57663
   C       -3.30614        1.40061        0.37986
   C       -3.32589       -0.54967        1.57670
   C       -1.01840        1.39699        0.35959
   C       -2.91524        0.84239        1.66286
   C       -0.30750       -0.77791        0.37968
   C       -1.46558        0.78209        1.58809
   C       -2.16847       -2.24207        0.39240
   C       -4.12374       -0.82125        0.39289
   C       -2.16820        1.87035       -0.39240
   C       -0.21292        0.44953       -0.39289
   C       -1.03052       -1.77232       -0.37986
   C       -3.31827       -1.76871       -0.35959
   C       -4.02917        0.40620       -0.37968
   C       -2.17999        1.02765       -1.57663
   C       -1.01077        0.17796       -1.57670
   C       -1.42143       -1.21410       -1.66286
   C       -2.87109       -1.15381       -1.58809
   C       -3.37638        0.20661       -1.66249
*
